--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@babel/core": "^7.2.2",
         "@babel/preset-env": "^7.2.3",
+        "@storybook/addon-storysource": "^5.3.9",
         "babel-core": "^6.26.0",
         "babel-loader": "^8.0.5",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -27,15 +28,13 @@
         "@storybook/addon-a11y": "^5.3.9",
         "@storybook/addon-actions": "^5.3.9",
         "@storybook/addon-knobs": "^5.3.9",
-        "@storybook/addon-storysource": "^5.3.9",
-        "@storybook/melody": "file:../../melody/packages/melody-storybook",
+        "@storybook/melody": "file:../melody-storybook",
         "melody-component": "^1.0.0",
         "melody-hoc": "^1.0.0",
         "melody-idom": "^1.0.0",
-        "melody-loader": "^1.0.0",
+        "melody-loader": "^1.6.0",
         "melody-parser": "^1.0.0",
         "melody-plugin-idom": "^1.0.0",
-        "melody-storybook": "file:../../melody/packages/melody-storybook",
         "melody-traverse": "^1.0.0",
         "melody-types": "^1.0.0",
         "rxjs": "^6.4.0"
